--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>System Layout Creator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="canvas" width="1100" height="450">
+    <main>
 
-        THIS IS FALLBACK MESSAGE FOR OLD BROWSERS
+        <div class="left-block">
+            <canvas id="layout-canvas" width="1000" height="500"></canvas>
+        </div>
+        
+        <div class="right-block">
+            <div class="buttons">
+                <input type="file" id="inp" name="imageLoader"/>
+                <button id="clear" type="button">Clear</button>
+                <button id="download" type="button">Download</button>
+            </div>
+        </div>
 
-        YOUR BROWSER IS NOT SUPPORTING CANVAS
-
-    </canvas>
+    </main>
+    
     <script src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.0/fabric.min.js"></script>
 </body>
 </html>
