--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     </main>
     
-    <script src="main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.0/fabric.min.js"></script>
+    <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
