--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="system-icons">
                 <div class="row">
-                    <img src="images/cctv.png">
+                    <img src="images/camera.png">
                     <img src="images/intruderalarm.png">
                 </div>
 
