different camera coverages

--- a/index.html
+++ b/index.html
@@ -24,16 +24,20 @@
             <div class="system-icons">
                 <div class="row">
                     <img src="images/camera.png">
+                    <img src="images/camera2.png">
+                </div>
+
+                <div class="row">
+                    <img src="images/camera3.png">
                     <img src="images/intruderalarm.png">
                 </div>
 
                 <div class="row">
                     <img src="images/firealarm.png">
-                    <img src="images/access.png">
-                </div>
-
-                <div class="row">
                     <img src="images/panicalarm.png">
+                </div>
+                <div class="row">
+                    <img src="images/access.png">
                     <img src="images/extinguisher.png">
                 </div>
             </div>
