--- a/index.html
+++ b/index.html
@@ -9,39 +9,38 @@
   </head>
   <body>
     <main>
-      <div class="left-block">
-        <canvas id="layout-canvas" width="1000px" height="600px"></canvas>
-      </div>
-
-      <div class="right-block">
-        <div class="buttons">
-          <button id="choose-background-btn">Choose Background</button>
-          <input id="choose-background" type="file" style="display: none" />
-          <button id="clear" type="button">Clear</button>
-          <button id="download" type="button">Download</button>
-          <button id="adding-line-btn" type="button">Add Line</button>
-          <button id="deactivate-adding-shape-btn" type="button">
-            Deactivate Line
-          </button>
+      <div class="canvas-container">
+        <div class="left-block">
+          <canvas id="layout-canvas" width="1000px" height="600px"></canvas>
         </div>
-        <div class="system-icons">
-          <div class="row">
-            <img src="images/camera.png" />
-            <img src="images/camera2.png" />
-          </div>
 
-          <div class="row">
-            <img src="images/camera3.png" />
-            <img src="images/intruderalarm.png" />
+        <div class="right-block">
+          <div class="buttons">
+            <button id="choose-background-btn">Background</button>
+            <input id="choose-background" type="file" style="display: none" />
+            <button id="clear" type="button">Clear</button>
+            <button id="download" type="button">Download</button>
+            <button id="adding-line-btn" type="button">Add Line</button>
           </div>
+          <div class="system-icons">
+            <div class="row">
+              <img src="images/camera.png" />
+              <img src="images/camera2.png" />
+            </div>
 
-          <div class="row">
-            <img src="images/firealarm.png" />
-            <img src="images/panicalarm.png" />
-          </div>
-          <div class="row">
-            <img src="images/access.png" />
-            <img src="images/extinguisher.png" />
+            <div class="row">
+              <img src="images/camera3.png" />
+              <img src="images/intruderalarm.png" />
+            </div>
+
+            <div class="row">
+              <img src="images/firealarm.png" />
+              <img src="images/panicalarm.png" />
+            </div>
+            <div class="row">
+              <img src="images/access.png" />
+              <img src="images/extinguisher.png" />
+            </div>
           </div>
         </div>
       </div>
