--- a/index.html
+++ b/index.html
@@ -6,44 +6,184 @@
     <title>System Layout Creator</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="/images/ipfavicon.jpg" />
+    <script type="text/javascript" src="scripts/sidebar.js" defer></script>
   </head>
   <body>
-    <main>
-      <div class="canvas-container">
-        <div class="left-block">
-          <canvas id="layout-canvas" width="1000px" height="600px"></canvas>
-        </div>
+    <aside id="sidebar" class="close">
+      <ul>
+        <li>
+          <span class="logo">Options</span>
+          <button onclick="toggleSidebar()" id="toggle-btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#1f1f1f"
+            >
+              <path
+                d="M383-480 200-664l56-56 240 240-240 240-56-56 183-184Zm264 0L464-664l56-56 240 240-240 240-56-56 183-184Z"
+              />
+            </svg>
+          </button>
+        </li>
 
-        <div class="right-block">
-          <div class="buttons">
-            <button id="choose-background-btn">Background</button>
+        <li>
+          <a id="choose-background-btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#1f1f1f"
+            >
+              <path
+                d="M200-120q-33 0-56.5-23.5T120-200v-240h80v240h240v80H200Zm320 0v-80h240v-240h80v240q0 33-23.5 56.5T760-120H520ZM240-280l120-160 90 120 120-160 150 200H240ZM120-520v-240q0-33 23.5-56.5T200-840h240v80H200v240h-80Zm640 0v-240H520v-80h240q33 0 56.5 23.5T840-760v240h-80Zm-140-40q-26 0-43-17t-17-43q0-26 17-43t43-17q26 0 43 17t17 43q0 26-17 43t-43 17Z"
+              />
+            </svg>
+            <span>Upload Background</span>
             <input id="choose-background" type="file" style="display: none" />
-            <button id="clear" type="button">Clear</button>
-            <button id="download" type="button">Download</button>
-            <button id="adding-line-btn" type="button">Add Line</button>
-          </div>
-          <div class="system-icons">
-            <div class="row">
-              <img src="images/camera.png" />
-              <img src="images/camera2.png" />
-            </div>
+          </a>
+        </li>
 
-            <div class="row">
-              <img src="images/camera3.png" />
-              <img src="images/intruderalarm.png" />
-            </div>
+        <li>
+          <a id="clear">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#1f1f1f"
+            >
+              <path
+                d="m376-320 104-104 104 104 56-56-104-104 104-104-56-56-104 104-104-104-56 56 104 104-104 104 56 56ZM160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm0-80h640v-480H160v480Zm0 0v-480 480Z"
+              />
+            </svg>
+            <span>Clear Background</span>
+          </a>
+        </li>
 
-            <div class="row">
-              <img src="images/firealarm.png" />
-              <img src="images/panicalarm.png" />
+        <li>
+          <a id="download">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#1f1f1f"
+            >
+              <path
+                d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z"
+              />
+            </svg>
+            <span>Download Site Map</span>
+          </a>
+        </li>
+
+        <li>
+          <a id="adding-line-btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#1f1f1f"
+            >
+              <path
+                d="M80 0v-160h800V0H80Zm160-320h56l312-311-29-29-28-28-311 312v56Zm-80 80v-170l448-447q11-11 25.5-17t30.5-6q16 0 31 6t27 18l55 56q12 11 17.5 26t5.5 31q0 15-5.5 29.5T777-687L330-240H160Zm560-504-56-56 56 56ZM608-631l-29-29-28-28 57 57Z"
+              />
+            </svg>
+            <span>Draw Wall (esc to exit)</span>
+          </a>
+        </li>
+
+        <li>
+          <button onclick="toggleSubMenu(this)" class="dropdown-btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#1f1f1f"
+            >
+              <path
+                d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h480q33 0 56.5 23.5T720-720v180l160-160v440L720-420v180q0 33-23.5 56.5T640-160H160Zm0-80h480v-480H160v480Zm0 0v-480 480Z"
+              />
+            </svg>
+            <span>Cameras</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#e8eaed"
+            >
+              <path
+                d="M480-361q-8 0-15-2.5t-13-8.5L268-556q-11-11-11-28t11-28q11-11 28-11t28 11l156 156 156-156q11-11 28-11t28 11q11 11 11 28t-11 28L508-372q-6 6-13 8.5t-15 2.5Z"
+              />
+            </svg>
+          </button>
+          <ul class="sub-menu">
+            <div>
+              <li><a>Camera 1</a></li>
+              <li><a>Camera 2</a></li>
+              <li><a>Camera 3</a></li>
             </div>
-            <div class="row">
-              <img src="images/access.png" />
-              <img src="images/extinguisher.png" />
+          </ul>
+        </li>
+        <li>
+          <button onclick="toggleSubMenu(this)" class="dropdown-btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#1f1f1f"
+            >
+              <path
+                d="M480-560q17 0 28.5-11.5T520-600q0-17-11.5-28.5T480-640q-17 0-28.5 11.5T440-600q0 17 11.5 28.5T480-560Zm0 360q-99 0-169.5-13.5T240-246v-34h-73q-35 0-59-26t-21-61l27-320q2-31 25-52t55-21h572q32 0 55 21t25 52l27 320q3 35-21 61t-59 26h-73v34q0 19-70.5 32.5T480-200ZM167-360h626l-27-320H194l-27 320Zm313-160Z"
+              />
+            </svg>
+            <span>Devices</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#e8eaed"
+            >
+              <path
+                d="M480-361q-8 0-15-2.5t-13-8.5L268-556q-11-11-11-28t11-28q11-11 28-11t28 11l156 156 156-156q11-11 28-11t28 11q11 11 11 28t-11 28L508-372q-6 6-13 8.5t-15 2.5Z"
+              />
+            </svg>
+          </button>
+          <ul class="sub-menu">
+            <div class="device-icons">
+              <div class="device-row">
+                <img src="images/camera.png" />
+                <img src="images/camera2.png" />
+              </div>
+              <div class="device-row">
+                <img src="images/intruderalarm.png" />
+                <img src="images/firealarm.png" />
+              </div>
+
+              <div class="device-row">
+                <img src="images/panicalarm.png" />
+                <img src="images/access.png" />
+              </div>
+              <div class="device-row">
+                <img src="images/extinguisher.png" />
+                <img src="images/emergency-lighting.png" />
+              </div>
             </div>
-          </div>
-        </div>
-      </div>
+          </ul>
+        </li>
+      </ul>
+    </aside>
+
+    <main>
+      <div class="canvas-container"><canvas id="canvas-layout"></canvas></div>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.0/fabric.min.js"></script>
