camera coverage fixes, code merged into one util file instead of 3 separate files

--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
                 <img src="images/camera.png" />
                 <img src="images/camera2.png" />
               </div>
+
+              <div class="device-row">
+                <img src="images/camera3.png" />
+              </div>
               <div class="device-row">
                 <img src="images/intruderalarm.png" />
                 <img src="images/firealarm.png" />
