new cameras, camera coverage updates, code refactored

--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
 
               <div class="device-row">
                 <img src="images/camera3.png" />
+                <img src="images/camera4.png" />
+              </div>
+
+              <div class="device-row">
+                <img src="images/camera5.png" />
+                <img src="images/camera6.png" />
               </div>
               <div class="device-row">
                 <img src="images/intruderalarm.png" />
